--- a/hungrezy-frontend-client/public/index.html
+++ b/hungrezy-frontend-client/public/index.html
@@ -33,7 +33,7 @@
   
     <script
     type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSQDLzC_zu_IR4FmuimZmwnRTmIZ9I
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY
     &libraries=places"
   ></script>
     <title>Hungrezy</title>
